<resources>
    <string name="app_name">DedeGame</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="book_publisher">Book Publisher</string>
    <string name="book_des">Book Description</string>
    <string name="add_book_submit">Add Book</string>
    <string name="item_book_title">Book title: %s</string>
    <string name="item_book_author">Author: %s</string>
    <string name="book_detail_title">Book title: %s</string>
    <string name="book_detail_des">Description: %s</string>
    <string name="book_detail_publisher">Publisher: %s</string>
    <string name="book_detail_rank">Rank: %s</string>
    <string name="news_title">Tin tức</string>
    <string name="rank_title">Xếp hạng</string>
    <string name="trending_title">Trending</string>
    <string name="rank_title_button">Bảng xếp hạng</string>
    <string name="category_title_button">Phân loại</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="story_cover_top_read_now">Đọc ngay</string>
    <string name="story_cover_top_comment_label">Comment</string>
    <string name="story_cover_top_comments_label">Comments</string>
    <string name="story_cover_top_read_later">Đọc sau</string>
    <string name="story_cover_summary_title">Tóm tắt</string>
    <string name="story_cover_latest_chapter_title">Chương mới nhất</string>
    <string name="story_cover_comment_title">Bình luận</string>
    <string name="story_cover_comment_like">Thích</string>
    <string name="story_cover_comment_feedback">Phản hồi</string>
    <string name="story_cover_join_comment">Viết bình luận</string>
    <string name="action_comment_send">Gửi bình luận</string>
    <string name="story_cover_comment_action_not_login">Hãy đăng nhập hoặc tạo tài khoản để gửi bình luận</string>
    <string name="story_cover_login_to_comment">Đăng nhập để bình luận</string>
    <string name="story_cover_login_to_interaction">Đăng nhập để tương tác</string>
    <string name="view_comment_detail_all_comment">Tất cả bình luận</string>
    <string name="view_comment_no_comment">Chưa có bình luận nào</string>
    <string name="all_comment_screen_replying"><![CDATA[Đang phản hồi <b>%s</b> -]]></string>
    <string name="app_common_cancel">Hủy</string>

    <string name="view_more">Xem thêm</string>

    <string name="shop_screen_label">Gói đăng ký hệ thống</string>

    <string name="event_title">Sự kiện</string>
    <string name="notification_title">Thông báo</string>
    <string name="game_title">Games</string>
    <string name="title_open_game">Game đã ra mắt</string>
    <string name="title_coming_game">Game sắp ra mắt</string>

    <string name="option_chapter_previous_action">Trước</string>
    <string name="option_chapter_next_action">Sau</string>
    <string name="option_chapter_comment_action">Bình luận</string>
    <string name="option_chapter_sound_action">Âm thanh</string>
    <string name="option_chapter_chapter_action">Chương</string>
    <string name="app_chapter_lis_title">Danh sách chương</string>

    <string name="chapter_cover_author_label">Tác giả</string>
    <string name="chapter_cover_rating_label">Đánh giá</string>
    <string name="chapter_cover_number_rated">Có %d đánh giá</string>
    <string name="chapter_cover_not_yet_rated">Chưa có đánh giá</string>
    <string name="story_cover_rating_success">Đánh giá thành công</string>
    <string name="story_cover_bookmark_label">Bookmark</string>
    <string name="story_cover_no_story_summary_yet">Chưa có nội dung tóm tắt</string>

    <string name="profile_setting_title">Cá nhân</string>
    <string name="profile_setting_logout">Đăng xuất</string>
    <string name="profile_setting_stories_followed">Đang theo dõi</string>
    <string name="profile_setting_stories_music_background">Nhạc nền truyện mặc định</string>
    <string name="profile_setting_stories_history">Lịch sử đọc</string>">

    <string name="dialog_user_logout_title">Đăng xuất</string>
    <string name="dialog_user_logout_content">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="dialog_user_logout_cancel">Hủy</string>
    <string name="dialog_user_logout_confirm">Đăng xuất</string>


    <string name="stories_followed_title">Đang theo dõi</string>
    <string name="stories_search_hint">Tìm kiếm kho truyện</string>
    <string name="stories_search_empty_result">Không tìm thấy kết quả</string>">

    <string name="app_common_coming_soon">Coming soon</string>">

</resources>