<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_marginStart="@dimen/margin_left_right_layout"
        android:layout_marginEnd="@dimen/margin_left_right_layout"
        android:background="@drawable/bg_corner_common_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/dialog_user_logout_title"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="16dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp"
            android:text="@string/dialog_user_logout_content"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_user_logout_cancel"
            android:textSize="@dimen/size_text_medium"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/bg_corner_grey_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnApply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_medium"
            android:background="@drawable/bg_corner_orange_button"
            android:text="@string/dialog_user_logout_confirm"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>