<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/black"
        android:background="@android:color/white"
        android:textSize="@dimen/size_text_large"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_left_right_layout"
        android:paddingEnd="@dimen/margin_left_right_layout"
        android:text="@string/view_comment_detail_all_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine1" >

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/ivEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_empty_comment"
        app:layout_constraintTop_toTopOf="@+id/rvComments"
        app:layout_constraintBottom_toBottomOf="@id/rvComments"
        app:layout_constraintStart_toStartOf="@+id/rvComments"
        app:layout_constraintEnd_toEndOf="@+id/rvComments"/>

    <TextView
        android:id="@+id/tvEmptyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/view_comment_no_comment"
        android:textColor="@color/color_app_common_hint_edt"
        android:textSize="@dimen/size_text_medium"
        app:layout_constraintBottom_toBottomOf="@id/rvComments"
        app:layout_constraintEnd_toEndOf="@+id/ivEmpty"
        app:layout_constraintStart_toStartOf="@+id/ivEmpty"
        app:layout_constraintTop_toBottomOf="@+id/ivEmpty"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivEmpty, tvEmptyTitle"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/viewLine"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:minHeight="40dp"
            android:maxHeight="80dp"
            android:scrollbars="vertical"
            android:hint="@string/story_cover_join_comment"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_medium"
            android:fontFamily="@font/montserrat_medium"
            android:textColorHint="@color/color_app_common_hint_edt"
            android:textCursorDrawable="@drawable/bg_edittext_caret"
            android:background="@drawable/bg_corner_grey_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imvSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLine" />

        <ImageView
            android:id="@+id/imvSend"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_send_msg"
            android:layout_marginEnd="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>