<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_small_between_part_in_item"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imvThumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imvThumbnail"
                app:layout_constraintEnd_toEndOf="@+id/imvThumbnail"
                app:layout_constraintStart_toStartOf="@+id/imvThumbnail">

                <TextView
                    android:id="@+id/txtReadNow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/orange_300_opacity_80"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/story_cover_top_read_now"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_medium" />

                <TextView
                    android:id="@+id/txtReadLater"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black_opacity_80"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:text="@string/story_cover_top_read_later"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_medium" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_between_part_in_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <TextView
            android:id="@+id/txtStoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_300"
            android:fontFamily="@font/montserrat_bold"
            android:textAllCaps="true"
            android:textSize="@dimen/size_text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStoryName">

            <LinearLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small_between_part_in_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imvFavorite"
                    android:layout_width="@dimen/size_icon_medium"
                    android:layout_height="@dimen/size_icon_medium"
                    android:background="@drawable/ic_lock"/>

                <TextView
                    android:id="@+id/txtFavCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginStart="@dimen/margin_small_between_part_in_item"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imvIconViewer"
                    android:layout_width="@dimen/size_icon_medium"
                    android:layout_height="@dimen/size_icon_medium"
                    android:background="@drawable/ic_lock"/>

                <TextView
                    android:id="@+id/txtCountViewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginStart="@dimen/margin_small_between_part_in_item"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_medium" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout53"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_between_part_in_item"
                android:layout_marginEnd="@dimen/margin_small_between_part_in_item"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <ImageView
                    android:id="@+id/imvCmt"
                    android:layout_width="@dimen/size_icon_medium"
                    android:layout_height="@dimen/size_icon_medium"
                    android:background="@drawable/ic_lock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtCountCmt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small_between_part_in_item"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_medium"
                    android:text="00"
                    android:fontFamily="@font/montserrat_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imvCmt"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtCmtLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small_between_part_in_item"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_very_small"
                    android:text="@string/story_cover_top_comment_label"
                    android:fontFamily="@font/montserrat_regular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imvCmt"
                    app:layout_constraintTop_toBottomOf="@+id/txtCountCmt"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:fontFamily="@font/montserrat_regular"
                   android:textSize="@dimen/size_text_small"/>

               <TextView
                   android:id="@+id/txtStatus"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:fontFamily="@font/montserrat_regular"
                   android:textSize="@dimen/size_text_small"/>

           </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

                <TextView
                    android:id="@+id/txtRank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

                <TextView
                    android:id="@+id/txtAlter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_to_medium_between_part_in_item"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/size_text_small"/>

                <TextView
                    android:id="@+id/txtType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_small"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>